# CREDERE

./: ARCHITECTURE.md  CASE_STUDY.md  DECISIONS..md  DISCLAIMER.md  EVALUATION.md  LICENSE.md  PROJECT_NARRATIVE.md  README.md  ROADMAP.md  RUNBOOK.md  THREAT_ MODEL.md  VALIDATION.md  pyproject.toml  run_demo_isolated.py  test_compliance.py  test_counterfactual.py  test_explanation.py  test_scoring.py
